src/test/ui/borrowck/borrowck-use-uninitialized-in-cast.stderr
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error[E0381]: borrow of possibly uninitialized variable: `x`
  --> $DIR/borrowck-use-uninitialized-in-cast.rs:7:13
   |
LL |     let y = x as *const i32;
   |             ^ use of possibly uninitialized `*x`
=======
error[E0381]: borrow of possibly-uninitialized variable: `x`
  --> $DIR/borrowck-use-uninitialized-in-cast.rs:7:13
   |
LL |     let y = x as *const i32;
   |             ^ use of possibly-uninitialized `*x`
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
